// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas para el componente GifGrid debe de mostrar el componente correctamente  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Chelsea
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`pruebas para el componente GifGrid debe de mostrar items cuando se cargan las imágenes useFetchGifs  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Chelsea
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="prueba"
      url="http://localhost"
    />
  </div>
</Fragment>
`;
